--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,20 @@
 *{
     margin: 0;
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
 .dark-2{
     color: #474747;
+}
+.secondary-background{
+    background-color: #FFF8F3;
 }
 .ul{
     display: flex;
@@ -107,4 +119,36 @@ nav ul li{
 .image{
     width: 584px;
     height: 676px;
-} 
+}
+main{
+    max-width: 1140px;
+    margin: 130px 230px;
+}
+.about{
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.pid{
+    display: flex;
+    justify-content: space-around;
+}
+.pg{
+    text-align: center;
+    margin: 30px 25px 0 25px;
+}
+main>section>h3{
+    margin-bottom: 30px;
+}
+#x1{
+    font-size: 20px;
+    color: #757575;
+}
+#x2{
+    font-size: 20px;
+    font-weight: bold;
+    color: #474747;
+}
+ 
