--- a/styles/style.css
+++ b/styles/style.css
@@ -134,10 +134,13 @@ main{
 .pid{
     display: flex;
     justify-content: space-around;
+    width: 100%;
 }
 .pg{
-    text-align: center;
-    margin: 30px 25px 0 25px;
+    margin-top: 30px;
+    /* margin: 30px 25px 0 25px; */
+    /* text-align: center; */
+
 }
 main>section>h3{
     margin-bottom: 30px;
@@ -150,5 +153,35 @@ main>section>h3{
     font-size: 20px;
     font-weight: bold;
     color: #474747;
+}
+.skills{
+    margin-top: 254px;
+}
+.text-center{
+    text-align: center;
+}
+.skill-container{
+    margin-top: 50px;
+    background-color: #FFFFFF;
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    max-width: 267px;
+    border-radius: 5px;
+    padding: 30px 33px 30px 30px;
+    background-color: #FFF8F3;
+    box-shadow: 0px 6px 50px 0px lightblue;
+}
+.sk{
+    margin-top: 28px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.pk{
+    font-size: 16px;
+    color: #757575;
 }
  
