--- a/styles/style.css
+++ b/styles/style.css
@@ -184,4 +184,44 @@ main>section>h3{
     font-size: 16px;
     color: #757575;
 }
+.rh{
+    margin-top: 130px;
+    margin-bottom: 113px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.ed-ex{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px
+}
+.edh{
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #474747;
+}
+.D0{
+    padding: 0px 47px 30px 0px;
+    box-shadow: 5px 5px 5px 3px lightblue  ;
+    margin-bottom: 30px;
+}
+.d1{
+    font-size: 25px;
+    font-weight: bold;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.d2{
+    font-size: 20px;
+    font-weight: 600;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.d3{
+    font-size: 16px;
+    color: #757575;
+}
  
