--- a/styles/style.css
+++ b/styles/style.css
@@ -310,5 +310,34 @@ main>section>h3{
     .about{
         margin: 0 15px;
     }
+    .hed{
+        background-image: none;
+    }
+    .banner{
+        flex-direction: column;
+        align-items: center;
+    }
+    .text{
+        width: auto;
+        align-items: center;
+        margin: 0;
+    }
+    .nav{
+        margin: 0;
+        flex-direction: column;
+    }
+    .ul{
+        flex-direction: column;
+    }
+    .main{
+        flex-direction: column;
+    }
+    .banner > img{
+        width: 100%;
+    }
+    #c{
+        width: 50%;
+        margin-top: 10px;
+    }
 }
  
